-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7
-
Component/s: client-libs
-
b142
-
x86
-
windows
-
Verified
SYNOPSIS
--------
Preedit String on active client is committed into unexpected component
OPERATING SYSTEM
----------------
Windows XP SP3 (Japanese)
FULL JDK VERSION
----------------
JDK 7 from b55 onwards
Does not occur with Java 6
DESCRIPTION
-----------
Preedit String on active client is committed into unexpected component.
Because of this problem, unexpected preedit string is remaining into active client.
The problem occurs from JDK7 b55 onwards. It does not happen with b54 and earlier. We suspect that the regression may be related to the fix for CR 6806217.
REPRODUCTION INSTRUCTIONS
-------------------------
1. Download IMFDemo sample programs from following URL:
http://download.oracle.com/javase/1.3/docs/guide/imf/api-tutorial.html
2. Compile and run IMFDemo
> javac *.java
> java IMFDemo
3. Move input focus to "Lightweight component, active client"
4. Turn on Japanese IME and type "ai" (Japanese AI is displayed)
5. Move input focus to "Lightweight component, passive client",
Japanese "AI" is committed into active client
6. Move input focus to "Lightweight component, active client"
7. Type "ai" (Japanese AI is displayed)
8. Move input focus to "Peered component",
Japanese "AI" is committed into Peered component <== UNEXPECTED
9. Move input focus to "Lightweight component, active client"
10. Press Backspace key to remove preedit string, but nothing happens <== UNEXPECTED
WORKAROUND
----------
None known.
--------
Preedit String on active client is committed into unexpected component
OPERATING SYSTEM
----------------
Windows XP SP3 (Japanese)
FULL JDK VERSION
----------------
JDK 7 from b55 onwards
Does not occur with Java 6
DESCRIPTION
-----------
Preedit String on active client is committed into unexpected component.
Because of this problem, unexpected preedit string is remaining into active client.
The problem occurs from JDK7 b55 onwards. It does not happen with b54 and earlier. We suspect that the regression may be related to the fix for CR 6806217.
REPRODUCTION INSTRUCTIONS
-------------------------
1. Download IMFDemo sample programs from following URL:
http://download.oracle.com/javase/1.3/docs/guide/imf/api-tutorial.html
2. Compile and run IMFDemo
> javac *.java
> java IMFDemo
3. Move input focus to "Lightweight component, active client"
4. Turn on Japanese IME and type "ai" (Japanese AI is displayed)
5. Move input focus to "Lightweight component, passive client",
Japanese "AI" is committed into active client
6. Move input focus to "Lightweight component, active client"
7. Type "ai" (Japanese AI is displayed)
8. Move input focus to "Peered component",
Japanese "AI" is committed into Peered component <== UNEXPECTED
9. Move input focus to "Lightweight component, active client"
10. Press Backspace key to remove preedit string, but nothing happens <== UNEXPECTED
WORKAROUND
----------
None known.
- relates to
-
JDK-7061057 Regression : NativeIM and JavaIM are activated at same time
-
- Open
-
-
JDK-7026055 Regression : Cannot use IME on JComboBox Japanese
-
- Closed
-
-
JDK-6806217 implement synthetic focus model for MS Windows
-
- Closed
-