7034291: Regression : Preedit String on active client is committed into unexpected component

Reviewed-by: art, naoto